force-app/main/default/objects/Case/fields/CAIP_Case_Merge_Field__c.field-meta.xml
<CustomField>
    <fullName>CAIP_Case_Merge_Field__c</fullName>
    <formula>&quot;Case &quot; &amp; CaseNumber  &amp; &quot; | &quot; &amp;  TEXT(Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CAIP Case Merge Field</label>
    <type>Text</type>
</CustomField>