force-app/main/default/objects/Case/fields/Case_Open_Days__c.field-meta.xml
<CustomField>
    <fullName>Case_Open_Days__c</fullName>
    <formula>IF(IsClosed, ROUND(ClosedDate - CreatedDate, 0), ROUND((NOW() - CreatedDate),0))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Open (Days)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>