force-app/main/default/objects/Case/fields/Chat_Transcript__c.field-meta.xml
<CustomField>
    <fullName>Chat_Transcript__c</fullName>
    <label>Chat Transcript</label>
    <length>131072</length>
    <type>Html</type>
</CustomField>