force-app/main/default/objects/Case/fields/Criteria_Fulfilled__c.field-meta.xml
<CustomField>
    <fullName>Criteria_Fulfilled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Criteria Fulfilled</label>
    <type>Checkbox</type>
</CustomField>