force-app/main/default/objects/Case/fields/Date_Time_Closed_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Closed_Cancelled__c</fullName>
    <label>Date/Time Closed/Cancelled</label>
    <type>DateTime</type>
</CustomField>