force-app/main/default/objects/Case/fields/InvitationLink__c.field-meta.xml
<CustomField>
    <fullName>InvitationLink__c</fullName>
    <label>InvitationLink</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>