force-app/main/default/objects/Case/fields/NBA_Florida_Check__c.field-meta.xml
<CustomField>
    <fullName>NBA_Florida_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBA Florida Check</label>
    <type>Checkbox</type>
</CustomField>