force-app/main/default/objects/Case/fields/NBA_Minnessota_Check__c.field-meta.xml
<CustomField>
    <fullName>NBA_Minnessota_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NBA Minnessota Check</label>
    <type>Checkbox</type>
</CustomField>