force-app/main/default/objects/Case/fields/No_of_Negative_Sentiments__c.field-meta.xml
<CustomField>
    <fullName>No_of_Negative_Sentiments__c</fullName>
    <label># of Negative Sentiments</label>
    <summaryFilterItems>
        <field>Sentiment_Score__c.Customer_Sentiments__c</field>
        <operation>equals</operation>
        <value>Negative</value>
    </summaryFilterItems>
    <summaryForeignKey>Sentiment_Score__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>