force-app/main/default/objects/Case/fields/No_of_Sentiments_to_be_considered__c.field-meta.xml
<CustomField>
    <fullName>No_of_Sentiments_to_be_considered__c</fullName>
    <label>No of Sentiments to be considered</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>