force-app/main/default/objects/Case/fields/RS_Additional_details_for_queue__c.field-meta.xml
<CustomField>
    <fullName>RS_Additional_details_for_queue__c</fullName>
    <label>Additional details for queue</label>
    <length>100</length>
    <type>Text</type>
</CustomField>