force-app/main/default/objects/Case/fields/RS_Case_Handle_Time__c.field-meta.xml
<CustomField>
    <fullName>RS_Case_Handle_Time__c</fullName>
    <formula>IF(
   ClosedDate -  CreatedDate &gt; 0 ,
  TEXT( FLOOR( ClosedDate - CreatedDate) ) &amp; &quot; days &quot;
  &amp; TEXT( FLOOR( MOD( (ClosedDate - CreatedDate ) * 24, 24 ) ) ) &amp; &quot; hours &quot;
  &amp; TEXT( ROUND( MOD( (ClosedDate - CreatedDate ) * 24 * 60, 60 ), 0 ) ) &amp; &quot; minutes&quot;,
  &quot;&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Handle Time</label>
    <type>Text</type>
</CustomField>