force-app/main/default/objects/Case/fields/RS_Case_Resolution__c.field-meta.xml
<CustomField>
    <fullName>RS_Case_Resolution__c</fullName>
    <label>Case Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Query Resolved</fullName>
            </value>
            <value>
                <fullName>Policy Renewed</fullName>
            </value>
            <value>
                <fullName>Policy Updated</fullName>
            </value>
            <value>
                <fullName>New Policy Issued</fullName>
            </value>
            <value>
                <fullName>Customer Information Updated</fullName>
            </value>
            <value>
                <fullName>Resolved By Bot</fullName>
            </value>
            <value>
                <fullName>Field assistance required</fullName>
                <isActive>false</isActive>
                <label>Field assistance required</label>
            </value>
            <value>
                <fullName>Resolved over phone</fullName>
                <isActive>false</isActive>
                <label>Resolved over phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>