force-app/main/default/objects/Case/fields/RS_Case_Resolution_Others__c.field-meta.xml
<CustomField>
    <fullName>RS_Case_Resolution_Others__c</fullName>
    <label>Case Resolution(Others)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>