force-app/main/default/objects/Case/fields/RS_CaseIntercationCount__c.field-meta.xml
<CustomField>
    <fullName>RS_CaseIntercationCount__c</fullName>
    <label>CaseIntercationCount</label>
    <summaryForeignKey>Sentiment_Score__c.Case__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>