force-app/main/default/objects/Case/fields/RS_Interactions__c.field-meta.xml
<CustomField>
    <fullName>RS_Interactions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>No Of Interactions</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>