force-app/main/default/objects/Case/fields/RS_Last_Interaction_Channel__c.field-meta.xml
<CustomField>
    <fullName>RS_Last_Interaction_Channel__c</fullName>
    <label>Last Interaction Channel</label>
    <length>20</length>
    <type>Text</type>
</CustomField>