force-app/main/default/objects/Case/fields/RS_Last_N_Negative_Interactions__c.field-meta.xml
<CustomField>
    <fullName>RS_Last_N_Negative_Interactions__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last N Negative Interactions</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>