force-app/main/default/objects/Case/fields/RS_Reason_for_Cancellation__c.field-meta.xml
<CustomField>
    <fullName>RS_Reason_for_Cancellation__c</fullName>
    <label>Reason for Cancellation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>