force-app/main/default/objects/Case/fields/RS_Reason_for_On_Hold__c.field-meta.xml
<CustomField>
    <fullName>RS_Reason_for_On_Hold__c</fullName>
    <label>Reason for On Hold</label>
    <length>255</length>
    <type>Text</type>
</CustomField>