force-app/main/default/objects/Case/fields/RS_SubType__c.field-meta.xml
<CustomField>
    <fullName>RS_SubType__c</fullName>
    <label>SubType</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Check Bill Balance</fullName>
            </value>
            <value>
                <fullName>Pay Bill</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Add Policy</fullName>
            </value>
            <value>
                <fullName>Update Policy</fullName>
            </value>
            <value>
                <fullName>Cancel Policy</fullName>
            </value>
            <value>
                <fullName>Review Existing Policy</fullName>
            </value>
            <value>
                <fullName>Update Account Information</fullName>
            </value>
            <value>
                <fullName>Raise a claim</fullName>
            </value>
            <value>
                <fullName>Revise a claim</fullName>
            </value>
            <value>
                <fullName>Incorrect Invoicing</fullName>
            </value>
            <value>
                <fullName>Renewals</fullName>
            </value>
            <value>
                <fullName>Complete Certification</fullName>
            </value>
            <value>
                <fullName>Check Claim status</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>