force-app/main/default/objects/Case/fields/RS_Survey_Question_Response__c.field-meta.xml
<CustomField>
    <fullName>RS_Survey_Question_Response__c</fullName>
    <description>hold the survery question response</description>
    <label>Survey Question Response</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>