force-app/main/default/objects/Case/fields/RSI_Appointment_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>RSI_Appointment_Date_Time__c</fullName>
    <label>Appointment Date &amp; Time</label>
    <type>DateTime</type>
</CustomField>