force-app/main/default/objects/Case/fields/RSI_Check_Owner__c.field-meta.xml
<CustomField>
    <fullName>RSI_Check_Owner__c</fullName>
    <formula>BEGINS(OwnerId,&apos;00G&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Check Owner</label>
    <type>Checkbox</type>
</CustomField>