force-app/main/default/objects/Case/fields/RSI_Details_of_Incorrect_Invoice__c.field-meta.xml
<CustomField>
    <fullName>RSI_Details_of_Incorrect_Invoice__c</fullName>
    <label>Details of Incorrect Invoice</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>