force-app/main/default/objects/Case/fields/RSI_Insurance_Agent_Required__c.field-meta.xml
<CustomField>
    <fullName>RSI_Insurance_Agent_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Insurance Agent Required?</label>
    <type>Checkbox</type>
</CustomField>