force-app/main/default/objects/Case/fields/RSI_Invoice_Amount__c.field-meta.xml
<CustomField>
    <fullName>RSI_Invoice_Amount__c</fullName>
    <label>Invoice Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>