force-app/main/default/objects/Case/fields/RSI_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>RSI_Invoice_Number__c</fullName>
    <label>Invoice Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>