force-app/main/default/objects/Case/fields/RSI_my_cases__c.field-meta.xml
<CustomField>
    <fullName>RSI_my_cases__c</fullName>
    <formula>ContactId = $User.ContactId</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>My Cases</label>
    <type>Checkbox</type>
</CustomField>