force-app/main/default/objects/Case/fields/RSI_Property_Price__c.field-meta.xml
<CustomField>
    <fullName>RSI_Property_Price__c</fullName>
    <label>Property Price</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>