force-app/main/default/objects/Case/fields/RSI_Schedule_Appointment__c.field-meta.xml
<CustomField>
    <fullName>RSI_Schedule_Appointment__c</fullName>
    <label>Schedule Appointment?</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>