force-app/main/default/objects/Case/fields/RSI_SLA_missed__c.field-meta.xml
<CustomField>
    <fullName>RSI_SLA_missed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA missed</label>
    <type>Checkbox</type>
</CustomField>