force-app/main/default/objects/Case/fields/RSI_SLA_Missed_Description__c.field-meta.xml
<CustomField>
    <fullName>RSI_SLA_Missed_Description__c</fullName>
    <label>SLA Missed Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>