force-app/main/default/objects/Case/fields/RSI_SLA_Missed_Reason__c.field-meta.xml
<CustomField>
    <fullName>RSI_SLA_Missed_Reason__c</fullName>
    <label>SLA Missed Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Work Volume delay</fullName>
            </value>
            <value>
                <fullName>Process delay</fullName>
            </value>
            <value>
                <fullName>3rd party delay</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>