force-app/main/default/objects/Case/fields/RSI_Status_Closed__c.field-meta.xml
<CustomField>
    <fullName>RSI_Status_Closed__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Closed</fullName>
                <default>true</default>
                <label>Closed</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>