force-app/main/default/objects/Case/fields/RSI_Transfer_to_new_state__c.field-meta.xml
<CustomField>
    <fullName>RSI_Transfer_to_new_state__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Transfer to new state?</label>
    <type>Checkbox</type>
</CustomField>