force-app/main/default/objects/Case/fields/Sentiment_formula__c.field-meta.xml
<CustomField>
    <fullName>Sentiment_formula__c</fullName>
    <formula>IF((Sentiment__c == &apos;Negative&apos;) ,IMAGE(&apos;/resource/angrymood&apos;,&quot;Negative&quot;,30,30)+BR()+Sentiment__c,
IF((Sentiment__c == &apos;Neutral&apos;), IMAGE(&apos;/resource/normalMood&apos;,&quot;Neutral&quot;,30,30)+BR()+Sentiment__c,
IF((Sentiment__c == &apos;Positive&apos; ), IMAGE(&apos;/resource/happyCustomer&apos;,&quot;Positive&quot;,30,30)+BR()+Sentiment__c,&apos;&apos;)))</formula>
    <label>Sentiment (formula)</label>
    <type>Text</type>
</CustomField>