force-app/main/default/objects/Case/fields/Session_id__c.field-meta.xml
<CustomField>
    <fullName>Session_id__c</fullName>
    <label>Session id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>