force-app/main/default/objects/Case/fields/SLA_Warning__c.field-meta.xml
<CustomField>
    <fullName>SLA_Warning__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLA Warning</label>
    <type>Checkbox</type>
</CustomField>