force-app/main/default/objects/Case/fields/Survey_Invitation__c.field-meta.xml
<CustomField>
    <fullName>Survey_Invitation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Survey Invitation</label>
    <referenceTo>SurveyInvitation</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>