force-app/main/default/objects/Case/fields/Survey_Question_Response_Image__c.field-meta.xml
<CustomField>
    <fullName>Survey_Question_Response_Image__c</fullName>
    <formula>CASE(RS_Survey_Question_Response__c,1,&quot;/resource/New1&quot;,
2,&quot;/resource/New2&quot;,
3,&quot;/resource/New3&quot;,
4,&quot;/resource/New4&quot;,
5,&quot;/resource/New5&quot;,
&quot;/resource/FeedbackNo&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Question Response Image</label>
    <type>Text</type>
</CustomField>