force-app/main/default/objects/Case/fields/Time_Left_in_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Time_Left_in_Minutes__c</fullName>
    <label>Time Left in Minutes</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>