force-app/main/default/objects/Case/recordTypes/Billing.recordType-meta.xml
<RecordType>
    <fullName>Billing</fullName>
    <active>true</active>
    <businessProcess>Case  Support Process</businessProcess>
    <label>Billing</label>
</RecordType>