force-app/main/default/objects/Case/recordTypes/Claims.recordType-meta.xml
<RecordType>
    <fullName>Claims</fullName>
    <active>true</active>
    <businessProcess>Case  Support Process</businessProcess>
    <label>Claims</label>
</RecordType>