force-app/main/default/objects/Case/recordTypes/Default.recordType-meta.xml
<RecordType>
    <fullName>Default</fullName>
    <active>true</active>
    <businessProcess>Case  Support Process</businessProcess>
    <label>Default</label>
</RecordType>