force-app/main/default/objects/Case/recordTypes/Policy.recordType-meta.xml
<RecordType>
    <fullName>Policy</fullName>
    <active>true</active>
    <businessProcess>Case  Support Process</businessProcess>
    <label>Policy</label>
</RecordType>