force-app/main/default/objects/Case/recordTypes/Update_Account_Information.recordType-meta.xml
<RecordType>
    <fullName>Update_Account_Information</fullName>
    <active>true</active>
    <businessProcess>Case  Support Process</businessProcess>
    <label>Update Account Information</label>
</RecordType>