force-app/main/default/objects/Case/validationRules/Case_Resolution.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Resolution</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
         ISPICKVAL(Status, &quot;Closed&quot;),  
	 ISBLANK(TEXT(RS_Case_Resolution__c))    
)</errorConditionFormula>
    <errorDisplayField>RS_Case_Resolution__c</errorDisplayField>
    <errorMessage>Please provide case resolution for closed case.</errorMessage>
</ValidationRule>