force-app/main/default/objects/Case/validationRules/Case_Resolution_is_Others.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Resolution_is_Others</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
ISPICKVAL(RS_Case_Resolution__c, &quot;Others&quot;),
ISBLANK(RS_Case_Resolution_Others__c)
)</errorConditionFormula>
    <errorDisplayField>RS_Case_Resolution_Others__c</errorDisplayField>
    <errorMessage>Please provide case resolution details</errorMessage>
</ValidationRule>