force-app/main/default/objects/Case/validationRules/SLA_breech_description.validationRule-meta.xml
<ValidationRule>
    <fullName>SLA_breech_description</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 OR(ISPICKVAL(Status, &quot;Closed&quot;),ISPICKVAL(Status, &quot;Cancelled&quot;)),
 RSI_SLA_missed__c = true,
ISBLANK(RSI_SLA_Missed_Description__c)
)</errorConditionFormula>
    <errorDisplayField>RSI_SLA_Missed_Description__c</errorDisplayField>
    <errorMessage>Please provide reason and description for SLA breech before closing the case</errorMessage>
</ValidationRule>