force-app/main/default/objects/Case/listViews/MyCases.listView-meta.xml
<ListView>
    <fullName>MyCases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.TYPE</columns>
    <columns>RS_SubType__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CASES.CLOSED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>RSI_my_cases__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>My Cases</label>
</ListView>